--- a/3-First-Rspnsv-Website/style.css
+++ b/3-First-Rspnsv-Website/style.css
@@ -29,3 +29,21 @@ body {
 .nav ul li:hover {
     background-color: black;
 }
+
+.image-area {
+    background-image:url("Images/Background.png");
+    background-position: center center;
+    background-size: cover;
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+
+.image-text {
+    text-align: center;
+    background-color: black;
+    color: white;
+    font-size: 2.5rem;
+    max-width: 1020px;
+    margin: 0px auto;
+    padding: 0px 16px;
+}
