--- a/3-First-Rspnsv-Website/style.css
+++ b/3-First-Rspnsv-Website/style.css
@@ -38,12 +38,45 @@ body {
     padding-bottom: 200px;
 }
 
+.centered-container {
+    max-width: 1020px;
+    margin: 0px auto;
+    padding: 0px 16px;
+}
+
 .image-text {
     text-align: center;
     background-color: black;
     color: white;
     font-size: 2.5rem;
-    max-width: 1020px;
-    margin: 0px auto;
+}
+
+.intro-text {
+    color: grey;
+    font-size: 1.5rem;
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.single-service {
+    text-align: center;
+    margin-bottom: 32px;
+}
+
+.single-service p {
     padding: 0px 16px;
 }
+
+@media screen and (min-width: 700px) {
+    .nav ul {
+        text-align: right;
+    }
+    .nav ul li {
+        display: inline-block;
+        border-bottom: 0px;
+        border-left: 1px solid black;
+        text-align: left;
+    }
+}
+
