--- a/3-First-Rspnsv-Website/style.css
+++ b/3-First-Rspnsv-Website/style.css
@@ -16,6 +16,7 @@ body {
     margin: 0px;
     padding: 0px;
     list-style-type: none;
+    font-size: 0px;
 }
 
 .nav ul li {
@@ -77,6 +78,10 @@ body {
         border-bottom: 0px;
         border-left: 1px solid black;
         text-align: left;
+    }
+    .single-service {
+        width: 50%;
+        float: left;
     }
 }
 
